@@ -9004,6 +9004,9 @@ procedure interactiveSession is
   result : aFileDescriptor;
 begin
   loop                                        -- repeatedly
+    -- A control-c will abort the prompt script, so we need to handle it first.
+    -- This will be a control-c from running the last command.
+    wasSIGINT := false;                         -- clear sig flag
     updateJobStatus;                          -- cleanup any background jobs
     error_found := false;                     -- no err for prompt
     if length( promptScript ) = 0 then
@@ -9027,9 +9030,8 @@ begin
        end if;
     end if;
     --put_bold( prompt );                       -- show prompt in bold
-    wasSIGINT := false;                       -- clear for getLine
     user_io.getline.getLine( command, prompt, keepHistory => true );  -- read command from keyboard
-    if wasSIGINT then                         -- control-c?
+    if wasSIGINT then                         -- control-c at prompt?
        command := null_unbounded_string;      -- pretend empty command
        wasSIGINT := false;                    -- we handled it
        new_line;                              -- user didn't push enter
@@ -9917,7 +9919,6 @@ begin
         checkAndInterpretScript( Argument( OptionOffset ) );
      end if;
   end if;
-
 end interpret;
 
 ------------------------------------------------------------------------------
